fix spacing

--- a/final/index.css
+++ b/final/index.css
@@ -54,7 +54,6 @@ header {
   background-size: clamp(800px, 100vw, 1000px) auto, auto 100vh;
   background-position: center center;
   background-repeat: no-repeat, repeat-x;
-  margin-bottom: 42px;
 }
 
 
@@ -82,14 +81,14 @@ main {
   grid-template-columns:repeat(auto-fit, minmax(236px, 1fr));
   column-gap: 42px;
   row-gap: 48px;
-  margin-inline: 42px;
+  padding: 42px;
 }
 
 @media (max-width: 496px) {
   main {
     column-gap: 24px;
     row-gap: 32px;
-    margin-inline: 24px;
+    padding-inline: 24px;
   }
 }
 
@@ -137,7 +136,6 @@ footer {
   align-items: center;
   column-gap: 24px;
   padding: 24px 42px;
-  margin-top: 42px;
 }
 
 footer p {
